# matching-with-privacy

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
configs/: adversarial.yaml  block_alpha.yaml  default.yaml  margin_scatter.yaml  plausible.yaml  sweep_gaussian.yaml  sweep_uniform.yaml
docs/: algorithms.md
results/: manifest.jsonl
results/raw/: 0681928e4c35_305fb4d4.parquet  54117d684a6e_305fb4d4.parquet  5622dd33022a_305fb4d4.parquet  62c9d09d4357_305fb4d4.parquet  6a2b0531cf86_305fb4d4.parquet  9fdb6d872ea2_305fb4d4.parquet
scripts/: run_experiment.py  update_readme.py
src/private_matching/: __init__.py  adversarial.py  cli.py  config.py  difficulty.py  experiment.py  instances.py  matching.py  metrics.py  plotting.py
src/private_matching/mechanisms/: __init__.py  auction.py  base.py  dual_sinkhorn.py  local.py
tests/: test_block_alpha.py  test_invariance.py  test_matching.py  test_mechanisms.py  test_metrics.py  test_privacy.py
